package dbgirl.homecooking.core.recommendation.service;

/**
 * Created by mengbo on 2017/6/19.
 */
public class PeriodHandler extends Handler {
    @Override
    void obtainBooks(Context context) {
//        TODO
    }
}
